--- a/scss/components/_cart.scss
+++ b/scss/components/_cart.scss
@@ -406,7 +406,6 @@
   }
 
   &__buttons {
-    padding-left: 0.1rem;
     display: flex;
     gap: 2.4rem;
     align-items: center;
@@ -418,15 +417,20 @@
       align-self: flex-end;
       width: 5.6rem;
       gap: 1.6rem;
-      padding: 0;
       margin-top: 0.88rem;
     }
 
-    svg {
-      display: block;
-      width: 2rem;
-      height: 2rem;
+    button {
+      border: transparent;
       cursor: pointer;
+      background: none;
+
+      svg {
+        display: block;
+        width: 2rem;
+        height: 2rem;
+        pointer-events: none;
+      }
     }
   }
 
